sidecarproxy/src/main/resources/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_inbound
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              # route inbound requests to "/persons" to
              - match: { prefix: "/persons" }
                route: { cluster: exampleservice }
          http_filters:
          - name: envoy.router
  - name: listener_outbound
    address:
      socket_address: { address: 0.0.0.0, port_value: 10010 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              # route outbound "persons" requests to the downstream service
              - match: { prefix: "/persons" }
                route: { cluster: downstreamservice }
          http_filters:
          - name: envoy.router
  clusters:
  - name: exampleservice
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: exampleservice, port_value: 35000 }}]
  - name: downstreamservice
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts: [{ socket_address: { address: downstreamservice, port_value: 35000 }}]
